--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
     </header>
     <section id="top">
         <div class="pattern"></div>
-
-        <video src="http://webcreatorbox.com/sample/images/jewellery.mov" autoplay loop>
-          <!-- <img src="http://webcreatorbox.com/sample/images/jewellery.jpg" alt="Placeholder"> -->
-        </video>
+        <img src="images/top-cover.mov" class="video" autoplay loop>
+      </img>
         <div class="inner-bg shadow">
           <h1>思い出をもっと「思い出らしく」残す</h1>
           <p>ボタンひとつで撮影・共有する新たなセルフィー体験</p>
