--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           </a>
         </div>
         <!--#TODO : レスポンシブメニューの実装 -->
-        <!-- #TODO : TOP画面は背景透明にする -->
         <div class="header-right">
           <ul class="nav" id="top-navigation">
             <li><a href="#top">Top</a></li>
@@ -38,8 +37,8 @@
         <div class="pattern"></div>
         <img src="images/top-cover.mov" class="video" autoplay loop>
       </img>
-        <div class="inner-bg shadow">
-          <h1>思い出をもっと「思い出らしく」残す</h1>
+        <div class="inner-bg">
+          <h1 class="shadow">思い出をもっと「思い出らしく」残す</h1>
           <p>ボタンひとつで撮影・共有する新たなセルフィー体験</p>
         </div>
         <a href="#about" class="scroll"><span></span></a>
@@ -182,12 +181,12 @@
         </div>
       </div>
       <!-- #TODO TOPに戻るボタンの実装 -->
-    </section>
+      <div id="page-top">
+        <a id="move-page-top"><i class="fa fa-chevron-circle-up fa-5x"></i></a>
+      </div>
     <footer class="main_footer">
   		<div class="container">
-<!-- #TODO: HackCampロゴの配置 -->
-  			<div class="footer_logo"><a href="/"><img src="images/HackCamp_logo.png" alt="HackCamp logomark" size="20%" ></a></div>
-
+  			<div class="footer_logo"><a href="/"><img src="images/produced_by_HC.png" alt="HackCamp logomark" size="20%" ></a></div>
   			<nav class="footer_nav">
   				<ul>
   					<li><a href="/">ホーム</a></li>
