--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ourshot</title>
+    <link rel="shortcut icon" href="images/icons/logo-icon.ico.png" >
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:700,400">
     <link rel="stylesheet" href="css/style.css">
@@ -50,6 +51,9 @@
         　携行性の高めたカード型のビーコンを活用した<br>
         　観光地やイベント会場などへの自撮りスポット提供サービスです</h3>
       </div>
+      <div class="movie-wrapper">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BV9-D4Uz7lY?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
+      </div>
         <div class="step-wrapper">
           <!-- #TODO:画像はSVGの背景透明のものに変更 -->
           <div class="step-box">
@@ -67,8 +71,6 @@
             <div class="box-title">写真が届く</div>
             <p class="box-content">各カードに登録されたメールアドレスに直接写真が届くので、一緒にボタンを押した人と共有されます</p>
           </div>
-        <div class="ss">
-        </div>
       </div>
       </section>
       <section id="features">
@@ -174,7 +176,7 @@
           <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
           <div class="button-content">
             <i class="fa fa-envelope-o icon-font" aria-hidden="true"></i>
-            <p class="button-text">お問い合わせをする</p>
+            <button class="btn">お問い合わせをする</button>
           </div>
         </a>
         </div>
@@ -183,20 +185,20 @@
       <div id="page-top">
         <a id="move-page-top"><i class="fa fa-chevron-circle-up fa-5x"></i></a>
       </div>
-    <footer class="main_footer">
-  		<div class="container">
-  			<div class="footer_logo"><a href="/"><img src="images/produced_by_HC.png" alt="HackCamp logomark" size="20%" ></a></div>
-  			<nav class="footer_nav">
-  				<ul>
-  					<li><a href="/">ホーム</a></li>
-  					<li><a href="/#event_info">イベント情報</a></li>
-  					<li><a href="/#company_info">会社概要</a></li>
-  					<li><a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">お問い合わせ</a></li>
-  				</ul>
-  			</nav>
-  			<small class="copyright">HackCamp © 2016 </small>
-  		</div>
-	   </footer>
+      <footer class="main_footer">
+    		<div class="container">
+    			<div class="footer_logo"><a href="http://www.hackcamp.jp/"><img src="images/produced-by-HC.png" alt="HackCamp logomark" size="20%" ></a></div>
+    			<nav class="footer_nav">
+    				<ul>
+    					<li><a href="/">ホーム</a></li>
+    					<li><a href="/#event_info">イベント情報</a></li>
+    					<li><a href="/#company_info">会社概要</a></li>
+    					<li><a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">お問い合わせ</a></li>
+    				</ul>
+    			</nav>
+    			<small class="copyright">HackCamp © 2016 </small>
+    		</div>
+  	   </footer>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
