--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:700,400">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="animate.min.css">
+    <link href="pace-theme-barber-shop.css" rel="stylesheet" />
+    <script src="js/pace.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
   <body>
@@ -79,8 +82,8 @@
           <!-- #TODO: 横からスライド -->
           <div class="feature-1 fea">
             <div class="inner">
-              <img src="images/feature-1.png" class="feature-img">
-              <div class="content">
+              <!-- <img src="images/feature-1.png" class="feature-img"> -->
+              <div class="content animated bounceInLeft" >
                 <h3 class="box-title">今までにない角度からの自撮り体験</h3>
                  <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や多角写真の撮影を体験いただくことができます</p>
               </div>
@@ -88,7 +91,7 @@
           </div>
           <div class="feature-2 fea">
             <div class="inner">
-              <img src="images/feature-2.png" class="feature-img">
+              <img src="images/feature-3.png" class="feature-img">
               <div class="content">
                 <h3 class="box-title">誰かが仲間外れになることがありません</h3>
                  <p class="box-content">観光地やイベント会場各所の定点にカメラが設置されていれば、カメラマン不要でシャッターを切ることが出来ます。<br>そうすれば仲間の誰かがカメラマンになる必要が無いので、仲間全員で最高の瞬間を逃すことなく記録することができます</p>
@@ -97,7 +100,7 @@
           </div>
           <div class="feature-3 fea">
             <div class="inner">
-              <img src="images/feature-3.png" class="feature-img">
+              <!-- <img src="" class="feature-img"> -->
               <div class="content">
                 <h3 class="box-title">驚くほど簡単にシェアできる</h3>
                  <p class="box-content"> カード型デバイスに登録されたメールアドレスそれぞれに写真が直接届くため、面倒な共有のための手間が無くなります。<br>その場で知り合った連絡先を知らない相手とでも同じ写真を簡単に共有することができます</p>
