fix back-image blightness

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <section id="top">
         <div class="pattern"></div>
-        <img src="images/top-cover.mov" class="video" autoplay loop>
+        <img src="images/top-cover.mov" class="video filter" autoplay loop>
       </img>
         <div class="inner-bg">
           <h1 class="shadow">思い出をもっと「思い出らしく」残す</h1>
@@ -83,7 +83,7 @@
           <div class="feature-1 fea">
             <div class="inner">
               <!-- <img src="images/feature-1.png" class="feature-img"> -->
-              <div class="content animated bounceInLeft" >
+              <div class="content" >
                 <h3 class="box-title">今までにない角度からの自撮り体験</h3>
                  <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や多角写真の撮影を体験いただくことができます</p>
               </div>
@@ -171,7 +171,7 @@
     </section>
     <section id="contact">
       <h3 class="heading">Contact</h3>
-      <div class="contact-wrapper">
+      <div class="contact-wrapper filter">
         <h3 class="service-title shadow">#ourshot_"YourSpot!!"</h3>
         <p class=" service-content">今秋リリースに向けた向けたourshotモニター企業・自治体を募集しております。<br>
         お問い合わせはこちらまで</p>
