--- a/index.html
+++ b/index.html
@@ -45,82 +45,85 @@
           <p>ボタンひとつで撮影・共有する新たなセルフィー体験</p>
         </div>
         <a href="#about" class="scroll"><span></span></a>
+        <!-- #TODO: ScrollのCSS正常化 -->
     </section>
-    <section id="about" class="about">
-      <h2 class="heading">About</h2>
-      <div class="about-wrapper">
-        <p class="about-top"><img src="images/logo-white.png" alt="logo-name" width="180px">とは</p>
-        <h3 class="about-text">
-        　携行性の高めたカード型のビーコンを活用した<br>
-        　観光地やイベント会場などへの自撮りスポット提供サービスです</h3>
-      </div>
-      <div class="movie-wrapper">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/BV9-D4Uz7lY?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
-      </div>
+    <section id="about">
+      <div class="wrapper">
+        <h2 class="heading">About</h2>
+        <div class="about-wrapper">
+          <p class="about-top"><img src="images/logo-white.png" alt="logo-name" width="180px">とは</p>
+          <h3 class="about-text">
+          　携行性の高めたカード型のビーコンを活用した<br>
+          　観光地やイベント会場などへの自撮りスポット提供サービスです</h3>
+        </div>
+        <div class="movie-wrapper">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/BV9-D4Uz7lY?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
+        </div>
         <div class="step-wrapper">
-          <!-- #TODO:画像はSVGの背景透明のものに変更 -->
           <div class="step-box">
-            <img src="images/camera.png" width="50%">
+            <img src="images/camera.png" class="step-img">
             <div class="box-title">カメラを設置する</div>
             <p class="box-content">専用アプリを搭載したAndroid端末を観光地やイベント会場に設置します。</p>
           </div>
           <div class="step-box">
-            <img src="images/push.png" width="50%">
+            <img src="images/push.png" class="step-img">
             <div class="box-title">ボタンを押した写真を撮る</div>
             <p class="box-content">カード型デバイスにメールアドレスを登録し、ボタンを押すだけ。設置されているカメラで自撮り体験を楽しんでいただきます。</p>
           </div>
           <div class="step-box">
-            <img src="images/sending.png" width="50%">
+            <img src="images/sending.png" class="step-img">
             <div class="box-title">写真が届く</div>
             <p class="box-content">各カードに登録されたメールアドレスに直接写真が届くので、一緒にボタンを押した人と共有されます</p>
           </div>
+        </div>
       </div>
-      </section>
-      <section id="features">
-        <h3 class="heading">Features</h3>
-        <div class="feature-wrapper">
-          <!-- #TODO: 横からスライド -->
-          <div class="feature-1 fea">
-            <div class="inner">
-              <!-- <img src="images/feature-1.png" class="feature-img"> -->
-              <div class="content" >
-                <h3 class="box-title">今までにない角度からの自撮り体験</h3>
-                 <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や多角写真の撮影を体験いただくことができます</p>
-              </div>
-            </div>
-          </div>
-          <div class="feature-2 fea">
-            <div class="inner">
-              <img src="images/feature-3.png" class="feature-img">
-              <div class="content">
-                <h3 class="box-title">誰かが仲間外れになることがありません</h3>
-                 <p class="box-content">観光地やイベント会場各所の定点にカメラが設置されていれば、カメラマン不要でシャッターを切ることが出来ます。<br>そうすれば仲間の誰かがカメラマンになる必要が無いので、仲間全員で最高の瞬間を逃すことなく記録することができます</p>
-              </div>
-            </div>
-          </div>
-          <div class="feature-3 fea">
-            <div class="inner">
-              <!-- <img src="" class="feature-img"> -->
-              <div class="content">
-                <h3 class="box-title">驚くほど簡単にシェアできる</h3>
-                 <p class="box-content"> カード型デバイスに登録されたメールアドレスそれぞれに写真が直接届くため、面倒な共有のための手間が無くなります。<br>その場で知り合った連絡先を知らない相手とでも同じ写真を簡単に共有することができます</p>
-              </div>
+    </section>
+    <section id="features">
+      <h3 class="heading">Features</h3>
+      <div class="feature-wrapper">
+        <!-- #TODO: 横からスライド -->
+        <div class="feature-1 fea">
+          <div class="inner">
+            <!-- #TODO: 位置が中央ではない -->
+            <div class="content" >
+              <h3 class="box-title">今までにない角度からの自撮り体験</h3>
+               <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や多角写真の撮影を体験いただくことができます</p>
             </div>
           </div>
         </div>
-      </section>
+        <div class="feature-2 fea">
+          <div class="inner">
+            <img src="images/feature-3.png" class="feature-img">
+            <div class="content">
+              <h3 class="box-title">誰かが仲間外れになることがありません</h3>
+               <p class="box-content">観光地やイベント会場各所の定点にカメラが設置されていれば、カメラマン不要でシャッターを切ることが出来ます。<br>そうすれば仲間の誰かがカメラマンになる必要が無いので、仲間全員で最高の瞬間を逃すことなく記録することができます</p>
+            </div>
+          </div>
+        </div>
+        <div class="feature-3 fea">
+          <div class="inner">
+            <div class="content">
+              <h3 class="box-title">驚くほど簡単にシェアできる</h3>
+               <p class="box-content"> カード型デバイスに登録されたメールアドレスそれぞれに写真が直接届くため、面倒な共有のための手間が無くなります。<br>その場で知り合った連絡先を知らない相手とでも同じ写真を簡単に共有することができます</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="case">
-    <h2 class="heading">Case</h2>
-      <div class="case-wrapper">
-        <div class="case-box">
-          <img src="images/icons/travel.png" class="case-img travel">
-          <div class="box-title">トラベル</div>
-          <p class="box-content">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行中の思い出をフォトブックとして提供いただくことも可能です。</p>
-        </div>
-        <div class="case-box">
-          <img src="images/icons/event.png" class="case-img event">
-          <div class="box-title">イベント</div>
-          <p class="box-content">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井に、皆が楽しめる一味違ったフォトブースを簡単に設置することができます。</p>
+      <div class="wrapper">
+        <h2 class="heading">Case</h2>
+        <div class="case-wrapper">
+          <div class="case-box">
+            <img src="images/icons/travel.png" class="case-img travel">
+            <div class="box-title">トラベル</div>
+            <p class="box-content">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行中の思い出をフォトブックとして提供いただくことも可能です。</p>
+          </div>
+          <div class="case-box">
+            <img src="images/icons/event.png" class="case-img event">
+            <div class="box-title">イベント</div>
+            <p class="box-content">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井に、皆が楽しめる一味違ったフォトブースを簡単に設置することができます。</p>
+          </div>
         </div>
       </div>
     </section>
@@ -170,18 +173,19 @@
       </div>
     </section>
     <section id="contact">
-      <h3 class="heading">Contact</h3>
-      <div class="contact-wrapper filter">
-        <h3 class="service-title shadow">#ourshot_"YourSpot!!"</h3>
-        <p class=" service-content">今秋リリースに向けた向けたourshotモニター企業・自治体を募集しております。<br>
-        お問い合わせはこちらまで</p>
-        <div class="general-button">
-          <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
-          <div class="button-content">
-            <i class="fa fa-envelope-o icon-font" aria-hidden="true"></i>
-            <button class="btn">お問い合わせをする</button>
+      <div class="wrapper">
+        <h3 class="heading">Contact</h3>
+        <div class="contact-wrapper filter">
+          <h3 class="service-title shadow">#ourshot_"YourSpot!!"</h3>
+          <p class=" service-content shadow">今秋リリースに向けたモニター企業・自治体を募集しております。</p>
+          <div class="general-button">
+            <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
+              <div class="button-content">
+                <i class="fa fa-envelope-o icon-font" aria-hidden="true"></i>
+                <button class="btn">お問い合わせをする</button>
+              </div>
+            </a>
           </div>
-        </a>
         </div>
       </div>
       <!-- #TODO TOPに戻るボタンの実装 -->
@@ -193,9 +197,8 @@
     			<div class="footer_logo"><a href="http://www.hackcamp.jp/"><img src="images/produced-by-HC.png" alt="HackCamp logomark" size="20%" ></a></div>
     			<nav class="footer_nav">
     				<ul>
-    					<li><a href="/">ホーム</a></li>
-    					<li><a href="/#event_info">イベント情報</a></li>
-    					<li><a href="/#company_info">会社概要</a></li>
+    					<li><a href="#top">ホーム</a></li>
+    					<li><a href="http://www.hackcamp.jp/#company_info">会社概要</a></li>
     					<li><a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">お問い合わせ</a></li>
     				</ul>
     			</nav>
