add header navi

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <div class="wrapper">
         <h3 class="heading">Contact</h3>
         <div class="contact-wrapper filter">
-          <h3 class="service-title shadow">#ourshot_"YourSpot!!"</h3>
+          <h3 class="service-title shadow liner">#ourshot_"YourSpot!!"</h3>
           <p class=" service-content shadow">今秋リリースに向けたモニター企業・自治体を募集しております。</p>
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
