--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="images/icons/logo-icon.ico.png" >
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:700,400">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="animate.min.css">
     <link href="pace-theme-barber-shop.css" rel="stylesheet" />
@@ -17,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="wrapper">
+      <div class="header-wrapper">
         <div class="header-title">
           <a href="#top">
             <img src="images/logo-icon.png" class="header-logo" alt="Logo" />
