--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="description" content="ourshot-lp">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ourshot</title>
     <link rel="shortcut icon" href="images/icons/logo-icon.ico.png" >
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:700,400">
-    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link href="pace-theme-barber-shop.css" rel="stylesheet" />
     <script src="js/pace.js" type="text/javascript"></script>
@@ -46,13 +46,12 @@
           <p>ボタンひとつで撮影・共有する新たなセルフィー体験</p>
         </div>
         <a href="#about" class="scroll"><span></span></a>
-        <!-- #TODO: ScrollのCSS正常化 -->
     </section>
     <section id="about">
       <div class="wrapper">
         <h2 class="heading">About</h2>
         <div class="about-wrapper">
-          <p class="about-top"><img src="images/logo-white.png" alt="logo-name" width="180px">とは</p>
+          <p class="about-top"><img src="images/logo-white.png" class="logo-name" alt="logo-name" width="180px">とは</p>
           <h3 class="about-text">
           　携行性の高めたカード型のビーコンを活用した<br>
           　観光地やイベント会場などへの自撮りスポット提供サービスです</h3>
@@ -68,7 +67,7 @@
           </div>
           <div class="step-box">
             <img src="images/push.png" class="step-img">
-            <div class="box-title">ボタンを押した写真を撮る</div>
+            <div class="box-title">ボタンを押す</div>
             <p class="box-content">カード型デバイスにメールアドレスを登録し、ボタンを押すだけ。設置されているカメラで自撮り体験を楽しんでいただきます。</p>
           </div>
           <div class="step-box">
