--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/earlyaccess/notosansjp.css">
     <link href="pace-theme-barber-shop.css" rel="stylesheet" />
     <script src="js/pace.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
   <body>
     <header class="header">
+      <div class="wrapper">
       <div class="header-wrapper">
         <div class="header-title">
           <a href="#top">
@@ -36,15 +38,17 @@
           </ul>
         </div>
       </div>
+    </div>
     </header>
     <section id="top">
         <div class="pattern"></div>
         <img src="images/top-cover.mov" class="video filter" autoplay loop>
-      </img>
+        </img>
+        <div class="wrapper">
         <div class="inner-bg">
-          <h1 class="shadow">思い出をもっと「思い出らしく」残す</h1>
-          <p>ボタンひとつで撮影・共有する新たなセルフィー体験</p>
+          <h1 class="shadow type">Just Push the Button<br> to create an exciting memory</p>
         </div>
+      </div>
         <a href="#about" class="scroll"><span></span></a>
     </section>
     <section id="about">
@@ -53,8 +57,10 @@
         <div class="about-wrapper">
           <p class="about-top"><img src="images/logo-white.png" class="logo-name" alt="logo-name" width="180px">とは</p>
           <h3 class="about-text">
-          　携行性の高めたカード型のビーコンを活用した<br>
-          　観光地やイベント会場などへの自撮りスポット提供サービスです</h3>
+            手で持ち歩けるサイズのビーコンを活用した<br>
+            観光地やイベント会場などへの自撮りスポット提供サービスです。<br>
+            自撮棒も撮影係も不要、ボタンを押すだけで遠景からの自撮や集合写真が思いのまま</h3>
+
         </div>
         <div class="movie-wrapper">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/BV9-D4Uz7lY?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
@@ -205,6 +211,21 @@
     			<small class="copyright">HackCamp © 2016 </small>
     		</div>
   	   </footer>
+       <script type="text/javascript" src="jquery.min.js"></script>
+       <script type="text/javascript" src="t.min.js"></script>
+       <script>
+        $(function(){
+          $(".type").t()
+        });
+        </script>
+        <script>
+          $('.type').t({
+            speed:100,
+            speed_vary:true,
+            blink:true,
+          });
+        </script>
+    <script src="js/t.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
