fix size footer-logo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
             手で持ち歩けるサイズのビーコンを活用した<br>
             観光地やイベント会場などへの自撮りスポット提供サービスです。<br>
             自撮棒も撮影係も不要、ボタンを押すだけで遠景からの自撮や集合写真が思いのまま</h3>
-
         </div>
         <div class="movie-wrapper">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/BV9-D4Uz7lY?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
@@ -91,7 +90,7 @@
         <div class="feature-1 fea">
           <div class="inner">
             <!-- #TODO: 位置が中央ではない -->
-            <div class="content" >
+            <div class="content effect" >
               <h3 class="box-title">今までにない角度からの自撮り体験</h3>
                <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や多角写真の撮影を体験いただくことができます</p>
             </div>
