--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <img src="images/logo-icon.png" class="header-logo" alt="Logo" />
           </a>
         </div>
-        <!--#TODO : レスポンシブメニューの実装 -->
         <div class="header-right">
           <ul class="nav" id="top-navigation">
             <li><a href="#top">Top</a></li>
@@ -42,8 +41,9 @@
     </header>
     <section id="top">
         <div class="pattern"></div>
-        <img src="images/top-cover.mov" class="video filter" autoplay loop>
-        </img>
+        <video src="images/top-movie.mov" autoplay loop>
+          <img src="images/everyone.png" alt="Placeholder">
+        </video>
         <div class="wrapper">
         <div class="inner-bg">
           <h1 class="shadow type">Just Push the Button<br> to create an exciting memory</p>
@@ -86,11 +86,9 @@
     <section id="features">
       <h3 class="heading">Features</h3>
       <div class="feature-wrapper">
-        <!-- #TODO: 横からスライド -->
         <div class="feature-1 fea">
           <div class="inner">
-            <!-- #TODO: 位置が中央ではない -->
-            <div class="content effect" >
+            <div class="content" >
               <h3 class="box-title">今までにない角度からの自撮り体験</h3>
                <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や多角写真の撮影を体験いただくことができます</p>
             </div>
