--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             観光地やイベント会場などへの自撮りスポット提供サービスです。<br>
             自撮棒も撮影係も不要、ボタンを押すだけで遠景からの自撮や集合写真が思いのまま</h3>
         </div>
-        <div class="movie-wrapper">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/BV9-D4Uz7lY?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
+        <div class="youtube">
+          <div class="movie-wrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/BV9-D4Uz7lY?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
+          </div>
         </div>
         <div class="step-wrapper">
           <div class="step-box">
@@ -96,7 +98,7 @@
         </div>
         <div class="feature-2 fea">
           <div class="inner">
-            <img src="images/feature-3.png" class="feature-img">
+            <img src="images/everyone.png" class="feature-img">
             <div class="content">
               <h3 class="box-title">誰かが仲間外れになることがありません</h3>
                <p class="box-content">観光地やイベント会場各所の定点にカメラが設置されていれば、カメラマン不要でシャッターを切ることが出来ます。<br>そうすれば仲間の誰かがカメラマンになる必要が無いので、仲間全員で最高の瞬間を逃すことなく記録することができます</p>
