--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
           <div class="case-box">
             <img src="images/icons/travel.png" class="case-img travel">
             <div class="box-title">トラベル</div>
-            <p class="box-content">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行中の思い出をフォトブックとして提供いただくことも可能です。</p>
+            <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行中の思い出をフォトブックとして提供いただくことも可能です。</p>
           </div>
           <div class="case-box">
             <img src="images/icons/event.png" class="case-img event">
             <div class="box-title">イベント</div>
-            <p class="box-content">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井に、皆が楽しめる一味違ったフォトブースを簡単に設置することができます。</p>
+            <p class="box-content text">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井に、皆が楽しめる一味違ったフォトブースを簡単に設置することができます。</p>
           </div>
         </div>
       </div>
