--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="header-wrapper">
         <div class="header-title">
           <a href="#top">
-            <img src="images/logo-icon.png" class="header-logo" alt="Logo" />
+            <img src="images/logo-icon.png" class="header-logo" alt="Logo">
           </a>
         </div>
         <div class="header-right">
@@ -99,7 +99,7 @@
         <div class="feature-2 fea">
           <div class="inner">
             <div class="content">
-              <h3 class="box-title">誰かが仲間外れになることがありません</h3>
+              <h3 class="box-title">もう誰かが仲間外れになりません</h3>
                <p class="box-content">観光地やイベント会場各所の定点にカメラが設置されていれば、カメラマン不要でシャッターを切ることが出来ます。<br>そうすれば仲間の誰かがカメラマンになる必要が無いので、仲間全員で最高の瞬間を逃すことなく記録することができます</p>
             </div>
           </div>
@@ -150,25 +150,21 @@
                 <h3 class="question">Q：撮影されたスマホのデータはどうなりますか？</h3>
                 <span>+</span>
                 <div class="answer">
-                  <p>設置されたスマホではデータを保存しません。<br>
-                    ダイレクトに登録されたメールアドレスへ送付しますので自分の写真や個人情報は残りません。<br>
-                    また、登録されたメールアドレスについても弊社がクラウド上で管理しておりますので、<br>設置されたスマホには一切個人情報は残りません。</p>
+                  <p>設置されたスマホではデータを保存しません。ダイレクトに登録されたメールアドレスへ送付しますので自分の写真や個人情報は残りません。また、登録されたメールアドレスについても弊社がクラウド上で管理しておりますので、設置されたスマホには一切個人情報は残りません</p>
                 </div>
               </li>
               <li class="faq-list-item">
                 <h3 class="question">Q：単発のイベントで利用することはできますか？</h3>
                 <span>+</span>
                 <div class="answer">
-                  <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。<br>
-                    （カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です）</p>
+                  <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。（カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です）</p>
                 </div>
               </li>
               <li class="faq-list-item">
                 <h3 class="question">Q：撮影用のスマートフォンはiPhoneにも対応していますか？</h3>
                 <span>+</span>
                 <div class="answer">
-                  <p>現在、対応機種はAndroid端末のみとなります。<br>
-                    弊社からSIMカード入りの端末のレンタルも行っておりますので、気軽にご利用が可能です</p>
+                  <p>現在、対応機種はAndroid端末のみとなります。弊社からSIMカード入りの端末のレンタルも行っておりますので、気軽にご利用が可能です</p>
                 </div>
               </li>
             </ul>
@@ -185,7 +181,6 @@
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
               <div class="button-content">
-                <i class="fa fa-envelope-o icon-font" aria-hidden="true"></i>
                 <button class="btn">お問い合わせをする</button>
               </div>
             </a>
@@ -198,7 +193,8 @@
       </div>
       <footer class="main_footer">
     		<div class="container">
-    			<div class="footer_logo"><a href="http://www.hackcamp.jp/"><img src="images/produced-by-HC.png" alt="HackCamp logomark" size="20%" ></a></div>
+          <div class="footer_logo_ourshot"><a href="http://www.hackcamp.jp/"><img src="images/logo-icon.png" alt="Logo"></a></div>
+    			<div class="footer_logo"><a href="http://www.hackcamp.jp/"><img src="images/produced-by-HC.png" alt="HackCamp logomark"></a></div>
     			<nav class="footer_nav">
     				<ul>
     					<li><a href="#top">ホーム</a></li>
