--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
           <p class="about-top"><img src="images/logo-white.png" class="logo-name" alt="logo-name" width="180px">とは</p>
           <h3 class="about-text">
             手で持ち歩けるサイズのビーコンを活用した<br>
-            観光地やイベント会場などへの自撮りスポット提供サービスです。<br>
-            自撮棒も撮影係も不要、ボタンを押すだけで遠景からの自撮や集合写真が思いのまま</h3>
+            自撮棒も撮影係も不要の自撮りスポット提供サービスです。<br>
+            ボタンを押すだけで遠景からの自撮や集合写真が思いのまま</h3>
         </div>
         <div class="youtube">
           <div class="movie-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/BV9-D4Uz7lY?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
+            <iframe width="320" height="180" src="https://www.youtube.com/embed/BEM2tVcEFc4?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="step-wrapper">
@@ -193,7 +193,7 @@
       </div>
       <footer class="main_footer">
     		<div class="container">
-          <div class="footer_logo_ourshot"><a href="http://www.hackcamp.jp/"><img src="images/logo-icon.png" alt="Logo"></a></div>
+          <div class="footer_logo_ourshot"><a href="#top"><img src="images/footer_logo.png" alt="Logo"></a></div>
     			<div class="footer_logo"><a href="http://www.hackcamp.jp/"><img src="images/produced-by-HC.png" alt="HackCamp logomark"></a></div>
     			<nav class="footer_nav">
     				<ul>
