--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="inner">
             <div class="content" >
               <h3 class="box-title">今までにない角度からの自撮り体験</h3>
-               <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や多角写真の撮影を体験いただくことができます</p>
+               <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、<br>複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や<br>多角写真の撮影を体験いただくことができます</p>
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
           <div class="inner">
             <div class="content">
               <h3 class="box-title">もう誰かが仲間外れになりません</h3>
-               <p class="box-content">観光地やイベント会場各所の定点にカメラが設置されていれば、カメラマン不要でシャッターを切ることが出来ます。<br>そうすれば仲間の誰かがカメラマンになる必要が無いので、仲間全員で最高の瞬間を逃すことなく記録することができます</p>
+               <p class="box-content">観光地やイベント会場各所の定点にカメラが設置されていれば、<br>カメラマン不要でシャッターを切ることが出来ます。<br>そうすれば仲間の誰かがカメラマンになる必要が無いので、<br>仲間全員で最高の瞬間を逃すことなく記録することができます</p>
             </div>
           </div>
         </div>
@@ -108,7 +108,7 @@
           <div class="inner">
             <div class="content">
               <h3 class="box-title">驚くほど簡単にシェアできる</h3>
-               <p class="box-content"> カード型デバイスに登録されたメールアドレスそれぞれに写真が直接届くため、面倒な共有のための手間が無くなります。<br>その場で知り合った連絡先を知らない相手とでも同じ写真を簡単に共有することができます</p>
+               <p class="box-content"> カード型デバイスに登録されたメールアドレスそれぞれに写真が直接届くため、<br>面倒な共有のための手間が無くなります。<br>その場で知り合った連絡先を知らない相手とでも同じ写真を簡単に共有することができます</p>
             </div>
           </div>
         </div>
