--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <section id="top">
         <div class="pattern"></div>
-        <video src="images/top-movie.mov" autoplay loop>
+        <video src="images/top_movie_5.mp4" autoplay loop>
           <img src="images/everyone.png" alt="Placeholder">
         </video>
         <div class="wrapper">
@@ -108,7 +108,7 @@
           <div class="inner">
             <div class="content">
               <h3 class="box-title">驚くほど簡単にシェアできる</h3>
-               <p class="box-content"> カード型デバイスに登録されたメールアドレスそれぞれに写真が直接届くため、<br>面倒な共有のための手間が無くなります。<br>その場で知り合った連絡先を知らない相手とでも同じ写真を簡単に共有することができます</p>
+               <p class="box-content"> 登録されたメールアドレスそれぞれに写真が直接届くため、<br>面倒な共有のための手間が無くなります。<br>その場で知り合った連絡先を知らない相手とでも同じ写真を簡単に共有することができます</p>
             </div>
           </div>
         </div>
