--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="description" content="ourshot-lp">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <title>ourshot</title>
-    <link rel="shortcut icon" href="images/icons/logo-icon.ico.png" >
+    <link rel="shortcut icon" href="images/logo-icon.ico.png" >
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:700,400">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
@@ -41,12 +43,12 @@
     </header>
     <section id="top">
         <div class="pattern"></div>
-        <video src="images/top_movie_5.mp4" autoplay loop>
+        <video src="images/top_movie.mp4" autoplay loop>
           <img src="images/everyone.png" alt="Placeholder">
         </video>
         <div class="wrapper">
         <div class="inner-bg">
-          <h1 class="shadow type">Just Push the Button<br> to create an exciting memory</p>
+          <h1 class="shadow type">Just Push<br>the Button<br>to create<br>an exciting memory</p>
         </div>
       </div>
         <a href="#about" class="scroll"><span></span></a>
@@ -70,7 +72,7 @@
           <div class="step-box">
             <img src="images/camera.png" class="step-img">
             <div class="box-title">カメラを設置する</div>
-            <p class="box-content">専用アプリを搭載したAndroid端末を観光地やイベント会場に設置します。</p>
+            <p class="box-content">専用アプリを搭載した端末を観光地やイベント会場に設置します。</p>
           </div>
           <div class="step-box">
             <img src="images/push.png" class="step-img">
@@ -119,12 +121,12 @@
         <h2 class="heading">Case</h2>
         <div class="case-wrapper">
           <div class="case-box">
-            <img src="images/icons/travel.png" class="case-img travel">
+            <img src="images/travel.png" class="case-img travel">
             <div class="box-title">トラベル</div>
             <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行中の思い出をフォトブックとして提供いただくことも可能です。</p>
           </div>
           <div class="case-box">
-            <img src="images/icons/event.png" class="case-img event">
+            <img src="images/event.png" class="case-img event">
             <div class="box-title">イベント</div>
             <p class="box-content text">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井に、皆が楽しめる一味違ったフォトブースを簡単に設置することができます。</p>
           </div>
