reflect woding change

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p class="about-top"><img src="images/logo-white.png" class="logo-name" alt="logo-name" width="180px">とは</p>
           <h3 class="about-text">
             手で持ち歩けるサイズのビーコンを活用した<br>
-            自撮棒も撮影係も不要の自撮りスポット提供サービスです。<br>
+            自撮棒も撮影係も不要の自撮りスポット提供サービス<br>
             ボタンを押すだけで遠景からの自撮や集合写真が思いのまま</h3>
         </div>
         <div class="youtube">
@@ -72,17 +72,17 @@
           <div class="step-box">
             <img src="images/camera.png" class="step-img">
             <div class="box-title">カメラを設置する</div>
-            <p class="box-content">専用アプリを搭載した端末を観光地やイベント会場に設置します。</p>
+            <p class="box-content">専用アプリを搭載した端末を観光地やイベント会場に設置</p>
           </div>
           <div class="step-box">
             <img src="images/push.png" class="step-img">
             <div class="box-title">ボタンを押す</div>
-            <p class="box-content">カード型デバイスにメールアドレスを登録し、ボタンを押すだけ。設置されているカメラで自撮り体験を楽しんでいただきます。</p>
+            <p class="box-content">メールアドレスを登録し、撮影したい時にボタンを押すだけ。<br>設置されているカメラで自撮り体験を楽しんでいただきます。</p>
           </div>
           <div class="step-box">
             <img src="images/sending.png" class="step-img">
             <div class="box-title">写真が届く</div>
-            <p class="box-content">各カードに登録されたメールアドレスに直接写真が届くので、一緒にボタンを押した人と共有されます</p>
+            <p class="box-content">ボタンを押した時の写真が届きアルバムでご覧になれます<br>一緒にボタンを押した人と自動で共有されます</p>
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
           <div class="inner">
             <div class="content" >
               <h3 class="box-title">今までにない角度からの自撮り体験</h3>
-               <p class="box-content">専用android端末であれば最大50m~100mの遠隔地からの撮影や、<br>複数台のシャッターを同時に切ることが出来るので、<br>通常の自撮ではありえないような遠景写真や<br>多角写真の撮影を体験いただくことができます</p>
+               <p class="box-content">最大50m~100mの遠隔地からの撮影や<br>複数のシャッターを同時に切ることが出来るので<br>通常の自撮ではありえないような遠景写真や<br>多角写真の撮影を体験いただくことができます</p>
             </div>
           </div>
         </div>
@@ -102,7 +102,7 @@
           <div class="inner">
             <div class="content">
               <h3 class="box-title">もう誰かが仲間外れになりません</h3>
-               <p class="box-content">観光地やイベント会場各所の定点にカメラが設置されていれば、<br>カメラマン不要でシャッターを切ることが出来ます。<br>そうすれば仲間の誰かがカメラマンになる必要が無いので、<br>仲間全員で最高の瞬間を逃すことなく記録することができます</p>
+               <p class="box-content">観光地やイベント会場の定点にカメラが設置されていれば、<br>仲間の誰かが撮影係になることなく集合写真が撮れるので<br>全員で最高の瞬間を逃すことなく記録することができます</p>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
           <div class="inner">
             <div class="content">
               <h3 class="box-title">驚くほど簡単にシェアできる</h3>
-               <p class="box-content"> 登録されたメールアドレスそれぞれに写真が直接届くため、<br>面倒な共有のための手間が無くなります。<br>その場で知り合った連絡先を知らない相手とでも同じ写真を簡単に共有することができます</p>
+               <p class="box-content">ボタンを押した人それぞれに同じ写真が届くため<br>面倒な共有のための手間が無くなります<br>その場で知り合った連絡先を知らない相手とでも<br>楽しんだ瞬間を共有することができます</p>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
           <div class="case-box">
             <img src="images/event.png" class="case-img event">
             <div class="box-title">イベント</div>
-            <p class="box-content text">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井に、皆が楽しめる一味違ったフォトブースを簡単に設置することができます。</p>
+            <p class="box-content text">ourshotなら連絡先の交換といったわずらわしさが無く写真を共有できるので、施設内の壁や天井に、皆が楽しめる一味違ったフォトブースを簡単に設置することができます</p>
           </div>
         </div>
       </div>
@@ -159,7 +159,7 @@
                 <h3 class="question">Q：単発のイベントで利用することはできますか？</h3>
                 <span>+</span>
                 <div class="answer">
-                  <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。（カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です）</p>
+                  <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です</p>
                 </div>
               </li>
               <li class="faq-list-item">
@@ -178,8 +178,8 @@
       <div class="wrapper">
         <h3 class="heading">Contact</h3>
         <div class="contact-wrapper filter">
-          <h3 class="service-title shadow liner">#ourshot_"YourSpot!!"</h3>
-          <p class=" service-content shadow">今秋リリースに向けたモニター企業・自治体を募集しております。</p>
+          <h3 class="service-title shadow liner">あなたのスポットにも導入しませんか？<br>ourshotはトラベラーや来客者に<br>最高の思い出を提供するサポートを致します</h3>
+          <p class=" service-content shadow">2016年秋リリース<br>現在モニター企業様・自治体様を募集しております</p>
           <div class="general-button">
             <a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">
               <div class="button-content">
