--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="description" content="ourshot-lp">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot">
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+    <meta property="fb:app_id" content="483671421838570" />
+    <meta property="og:type"   content="website" />
+    <meta property="og:url"    content="http://ourshot.net/" />
+    <meta property="og:title"  content="ourshot | Just push the button to create an exciting memory" />
+    <meta property="og:image"  content="  " />
+    <meta property="og:description"  content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot" />
+    <meta property="og:site_name"  content="ourshot" />
     <title>ourshot</title>
     <link rel="shortcut icon" href="images/logo-icon.ico.png" >
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
