upload ogp image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type"   content="website" />
     <meta property="og:url"    content="http://ourshot.net/" />
     <meta property="og:title"  content="ourshot | Just push the button to create an exciting memory" />
-    <meta property="og:image"  content="  " />
+    <meta property="og:image"  content="http://ourshot.net/images/top.png" />
     <meta property="og:description"  content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot" />
     <meta property="og:site_name"  content="ourshot" />
     <title>ourshot</title>
