--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="ourshot-lp">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot">
@@ -212,7 +211,7 @@
     					<li><a href="https://1lejend.com/stepmail/kd.php?no=UqpgJqOc" target="_blank">お問い合わせ</a></li>
     				</ul>
     			</nav>
-    			<small class="copyright">HackCamp © 2016 </small>
+    			<small class="copyright">HackCamp © 2016 All Rights Reserved.</small>
     		</div>
   	   </footer>
        <script type="text/javascript" src="jquery.min.js"></script>
