--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ourshot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot">
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
@@ -13,7 +14,6 @@
     <meta property="og:image"  content="http://ourshot.net/images/top.png" />
     <meta property="og:description"  content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot" />
     <meta property="og:site_name"  content="ourshot" />
-    <title>ourshot</title>
     <link rel="shortcut icon" href="images/logo-icon.ico.png" >
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:700,400">
@@ -159,21 +159,21 @@
                 <h3 class="question">Q：撮影されたスマホのデータはどうなりますか？</h3>
                 <span>+</span>
                 <div class="answer">
-                  <p>設置されたスマホではデータを保存しません。ダイレクトに登録されたメールアドレスへ送付しますので自分の写真や個人情報は残りません。また、登録されたメールアドレスについても弊社がクラウド上で管理しておりますので、設置されたスマホには一切個人情報は残りません</p>
+                  <p>設置されたスマホではデータを保存しません。<br>ダイレクトに登録されたメールアドレスへ送付しますので自分の写真や個人情報は残りません。<br>また、登録されたメールアドレスについても弊社がクラウド上で管理しておりますので、設置されたスマホには一切個人情報は残りません</p>
                 </div>
               </li>
               <li class="faq-list-item">
                 <h3 class="question">Q：単発のイベントで利用することはできますか？</h3>
                 <span>+</span>
                 <div class="answer">
-                  <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です</p>
+                  <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。<br>カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です</p>
                 </div>
               </li>
               <li class="faq-list-item">
                 <h3 class="question">Q：撮影用のスマートフォンはiPhoneにも対応していますか？</h3>
                 <span>+</span>
                 <div class="answer">
-                  <p>現在、対応機種はAndroid端末のみとなります。弊社からSIMカード入りの端末のレンタルも行っておりますので、気軽にご利用が可能です</p>
+                  <p>現在、対応機種はAndroid端末のみとなります。<br>弊社からSIMカード入りの端末のレンタルも行っておりますので、気軽にご利用が可能です</p>
                 </div>
               </li>
             </ul>
