--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot">
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
-    <meta property="fb:app_id" content="483671421838570" />
-    <meta property="og:type"   content="website" />
-    <meta property="og:url"    content="http://ourshot.net/" />
-    <meta property="og:title"  content="ourshot | Just push the button to create an exciting memory" />
-    <meta property="og:image"  content="http://ourshot.net/images/facebook_image.jpg" />
+    <meta property="fb:app_id" content="483671421838570">
+    <meta property="og:type"   content="website">
+    <meta property="og:url"    content="http://ourshot.net/">
+    <meta property="og:title"  content="ourshot | Just push the button to create an exciting memory">
+    <meta property="og:image"  content="http://ourshot.net/images/facebook_image.jpg">
     <meta property="og:description"  content="観光地やイベント会場で、もう自撮棒や撮影係は不要？ボタンを押すだけで広角自撮も集合写真も思いのまま！自動でシェアもできちゃうIoTデバイスサービスourshot!! #ourshot" />
-    <meta property="og:site_name"  content="ourshot" />
-    <link rel="shortcut icon" href="images/logo-icon.ico.png" >
+    <meta property="og:site_name"  content="ourshot">
+    <link rel="shortcut icon" href="images/logo-icon.ico.png">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:700,400">
     <link rel="stylesheet" href="css/normalize.css">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/earlyaccess/notosansjp.css">
-    <link href="pace-theme-barber-shop.css" rel="stylesheet" />
+    <link href="pace-theme-barber-shop.css" rel="stylesheet">
     <script src="js/pace.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
