--- a/index.html
+++ b/index.html
@@ -155,21 +155,21 @@
                 </div>
               </li>
               <li class="faq-list-item">
-                <h3 class="question">Q：撮影されたスマホのデータはどうなりますか？</h3>
+                <h3 class="question">Q：撮影されたデータはどうなりますか？</h3>
                 <span>+</span>
                 <div class="answer">
                   <p>設置されたスマホではデータを保存しません。<br>ダイレクトに登録されたメールアドレスへ送付しますので自分の写真や個人情報は残りません。<br>また、登録されたメールアドレスについても弊社がクラウド上で管理しておりますので、設置されたスマホには一切個人情報は残りません</p>
                 </div>
               </li>
               <li class="faq-list-item">
-                <h3 class="question">Q：単発のイベントで利用することはできますか？</h3>
+                <h3 class="question">Q：単発のイベントで利用できますか？</h3>
                 <span>+</span>
                 <div class="answer">
                   <p>期間レンタルから単発イベントへのレンタルまで幅広くサービス提供することが可能です。<br>カード型デバイスの電池は１〜２年間なので、最長レンタル期間は１年です</p>
                 </div>
               </li>
               <li class="faq-list-item">
-                <h3 class="question">Q：撮影用のスマートフォンはiPhoneにも対応していますか？</h3>
+                <h3 class="question">Q：撮影端末はiPhoneにも対応していますか？</h3>
                 <span>+</span>
                 <div class="answer">
                   <p>現在、対応機種はAndroid端末のみとなります。<br>弊社からSIMカード入りの端末のレンタルも行っておりますので、気軽にご利用が可能です</p>
