--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </header>
     <section id="top">
         <div class="pattern"></div>
-        <video src="images/top_movie.mp4" autoplay loop>
-          <img src="images/everyone.png" alt="Placeholder">
+        <video src="images/top_movie.mp4"　alt="images/top_sp.jpg" autoplay loop>
+          <img src="images/top_sp.jpg" alt="Placeholder">
         </video>
         <div class="wrapper">
         <div class="inner-bg">
@@ -88,7 +88,7 @@
           <div class="step-box">
             <img src="images/sending.png" class="step-img">
             <div class="box-title">写真が届く</div>
-            <p class="box-content">ボタンを押した時の写真が届きアルバムでご覧になれます<br>一緒にボタンを押した人と自動で共有されます</p>
+            <p class="box-content">ボタンを押した時の写真が届きアルバムでご覧になれます。<br>一緒にボタンを押した人と自動で共有されます</p>
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
           <div class="case-box">
             <img src="images/travel.png" class="case-img travel">
             <div class="box-title">トラベル</div>
-            <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行中の思い出をフォトブックとして提供いただくことも可能です。</p>
+            <p class="box-content text">ourshotがあればオススメのビュースポットに簡単にフォトスポットを作ることが可能です。トラベラーには遠隔でシャターを押せるカード型ビーコンと撮影ポイントの地図を渡すだけ。旅行時の思い出をまとめてフォトブックに出力いただくことも可能です</p>
           </div>
           <div class="case-box">
             <img src="images/event.png" class="case-img event">
