--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="youtube">
           <div class="movie-wrapper">
-            <iframe width="1280" height="720" src="https://www.youtube.com/embed/cmCNQaS-7hk?rel=0&modestbranding=0&showinfo=0&fs=0&controls=1&autohide=1" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/p_ewzJeyFSk?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div class="step-wrapper">
